--- a/erityisosaaminen.html
+++ b/erityisosaaminen.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="fi">
+
 <head>
     <title>Petra Partanen - Erityisosaaminen</title>
     <meta charset="UTF-8">
@@ -14,19 +17,17 @@
         <a href="tyokokemus.html"><i class="3"></i>Työkokemus</a>
         <a href="erityisosaaminen.html"><i class="4"></i>Erityisosaaminen</a>
 
-</body>
+    </div>
 
-</html>
-</div>
-
-<body>
     <div class="sivu">
 
         <h1>Erityisosaaminen</h1>
 
         <p>
-        <ul>
             <b>Kielitaito</b>
+        </p>
+
+        <ul>
             <li>Suomi äidinkieli</li>
             <li>Englanti sujuva</li>
             <li>Ruotsi hyvä</li>
@@ -36,31 +37,35 @@
 
         <br>
 
+        <p>
+            <b>IT-taidot</b>
+        </p>
+
         <ul>
-            <b> IT-taidot</b>
             <li>Microsoft Word</li>
             <li>Microsoft Excel</li>
             <li>Microsoft PowerPoint</li>
         </ul>
-        </p>
+
         <br>
 
         <div class="frame">
             <img src="https://img.freepik.com/premium-vector/cute-panda-watching-movie-laptop-cartoon-vector-icon-illustration-animal-technology-isolated_138676-8405.jpg"
-                alt="Panda" style="width:300px">
+                alt="Panda3" style="width:300px">
         </div>
 
         <br>
+        <h3>Lisään tänne myöhemmin projekteja jne.</h3>
+        <br>
 
-        <p>Lisään tänne myöhemmin projekteja jne.</p>
-         <br>
-
-         <a href="https://www.linkedin.com" target="_blank">
+        <form action="https://www.linkedin.com" method="get" target="_blank">
             <button class="nappi">LinkedIn</button>
-        </a>
+        </form>
 
         <br>
         <br>
 
+    </div>
 </body>
-</div>
+
+</html>
