--- a/etusivu.html
+++ b/etusivu.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="fi">
 
 <head>
   <title>Petra Partanen - Portfolio</title>
@@ -15,40 +16,42 @@
     <a href="koulutus.html"><i class="2"></i> Koulutus</a>
     <a href="tyokokemus.html"><i class="3"></i>Työkokemus</a>
     <a href="erityisosaaminen.html"><i class="4"></i>Erityisosaaminen</a>
+  </div>
 
-</body>
+  <div class="sivu">
 
-</html>
-</div>
+    <h1>Portfolio</h1>
+    <h2>Petra Partanen</h2>
 
-<!-- Page Content -->
-<div class="sivu">
 
-  <h1>Portfolio</h1>
-  <h2>Petra Partanen</h2>
+    <!--Validointi checker näytti tässä jonkin varoituksen (Text run is not in Unicode Normalization Form C), mutta silti kaikki vaikuttaisi toimivan ihan normaalisti-->
+    <p>Olen reipas ja töihin motivoitunut korkeakouluopiskelija. Viimeksi olen työskennellyt S-ryhmän
+      liikkeissä myymälätyöntekijänä. Olen juostava ja opin uusia asioita nopeasti. Tulen hyvin toimeen
+      ihmisten kanssa, koska olen kärsivällinen. Olen kiinnostunut ohjelmistokehityksestä ja
+      tietoturvasta.
 
-  <p>Olen reipas ja töihin motivoitunut korkeakouluopiskelija. Viimeksi olen työskennellyt S-ryhmän
-    liikkeissä myymälätyöntekijänä. Olen juostava ja opin uusia asioita nopeasti. Tulen hyvin toimeen
-    ihmisten kanssa, koska olen kärsivällinen. Olen kiinnostunut ohjelmistokehityksestä ja
-    tietoturvasta.
+    </p>
+    <br>
 
-  </p>
-  <br>
+    <img
+      src="https://img.freepik.com/free-vector/cute-panda-playing-on-laptop-cartoon-vector-icon-illustration-animal-technology-icon-isolated_138676-5387.jpg?w=2000"
+      alt="Panda1" usemap="#kartta" style="width: 300px;">
 
-  <img
-    src="https://img.freepik.com/free-vector/cute-panda-playing-on-laptop-cartoon-vector-icon-illustration-animal-technology-icon-isolated_138676-5387.jpg?w=2000"
-    alt="Kuva" usemap="#kartta" style="width: 300px;">
+    <map name="kartta">
+      <area shape="rect" coords="140,75,225,225" alt="Panda" href="https://fi.wikipedia.org/wiki/Isopanda"
+        target="_blank">
+      <area shape="circle" coords="80,220,40" alt="Tietokone" href="https://fi.wikipedia.org/wiki/Tietokone"
+        target="_blank">
+      <area shape="circle" coords="90,90,20" alt="Sydän" href="https://fi.wikipedia.org/wiki/Sydän_(kulttuuri)"
+        target="_blank">
+    </map>
 
-  <map name="kartta">
-    <area shape="rect" coords="140,75,225,225" alt="Panda" href="https://fi.wikipedia.org/wiki/Isopanda" target="_blank">
-    <area shape="circle" coords="80,220,40" alt="Tietokone" href="https://fi.wikipedia.org/wiki/Tietokone" target="_blank">
-    <area shape="circle" coords="90,90,20" alt="Sydän" href="https://fi.wikipedia.org/wiki/Sydän_(kulttuuri)" target="_blank">
-  </map>
+    <p><i>(Kokeile klikata kuvasta pandaa, tietokonetta ja sydäntä!)</i></p>
 
-  <p><i>(Kokeile klikata kuvasta pandaa, tietokonetta ja sydäntä!)</i></p>
-<br>
-<br>
-</div>
+    <br>
+    <br>
+
+  </div>      
 </body>
 
 </html>
