--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="fi">
+
 <head>
     <title>Petra Partanen - Työkokemus</title>
     <meta charset="UTF-8">
@@ -6,72 +9,83 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 
-  
-    <body>
-  
-      <div class="sidebar">
+<body>
+
+    <div class="sidebar">
         <a href="etusivu.html"><i class="1"></i>Etusivu</a>
         <a href="koulutus.html"><i class="2"></i> Koulutus</a>
         <a href="tyokokemus.html"><i class="3"></i>Työkokemus</a>
         <a href="erityisosaaminen.html"><i class="4"></i>Erityisosaaminen</a>
-  
-    </body>
 
-    </html>
     </div>
 
+    <div class="sivu">
 
-    <body>
-        <div class="sivu">
-            <h1>Työkokemus</h1>
+        <h1>Työkokemus</h1>
 
-            <p>
-                <b>Extraajat Pirkanmaa Oy</b>
-                <br>
-                Myymälätyöntekijä
-                <br>
-                Työtehtävät: Tuotteiden hyllyttäminen, asiakaspalvelu myymälässä ja myymälän yleisestä siisteydestä
-                huolehtiminen
-                <br>
-                2022-
-                <br>
-                <br>
+        <p>
+            <b>Extraajat Pirkanmaa Oy</b>
+            <br>
+            Myymälätyöntekijä
+            <br>
+            Työtehtävät: Tuotteiden hyllyttäminen, asiakaspalvelu myymälässä ja myymälän yleisestä siisteydestä
+            huolehtiminen
+            <br>
+            2022-
+            <br>
+            <br>
 
-                <b>Tampereen sosiaali- ja terveyspalvelut / Tehostettu palveluasuminen Jukola-Impivaara</b>
-                <br>
-                Kesäharjoittelu
-                <br>
-                Työtehtävät: Hoitoalan avustavat tehtävät, asukkaiden tukeminen ja auttaminen arjen askareissa,
-                harrastus- ja vapaa-ajan toiminnoissa avustaminen
-                <br>
-                2021, 2 viikkoa
-                <br>
-                <br>
-                <b>Tampereen pääkirjasto</b>
-                <br>
-                TET-harjoittelu
-                <br>
-                Työtehtävät: Palautetun aineiston käsittely, hyllyttäminen, myyntiin menevän aineiston leimaus,
-                varausten haku, uutuuksien käsittely ja AV-aineiston tarkistus
-                <br>
-                2018, 2 viikkoa
-                <br>
-                <br>
-                <b>Ylöjärven terveyskeskus</b>
-                <br>
-                TET-harjoittelu
-                <br>
-                Työtehtävät: Ruuan jakelu, siivoaminen, henkilökunnan avustaminen ja potilaiden auttaminen
-                <br>
-                2017, 3 päivää
-                <br>
-                <br>
+            <b>Tampereen sosiaali- ja terveyspalvelut / Tehostettu palveluasuminen Jukola-Impivaara</b>
+            <br>
+            Kesäharjoittelu
+            <br>
+            Työtehtävät: Hoitoalan avustavat tehtävät, asukkaiden tukeminen ja auttaminen arjen askareissa,
+            harrastus- ja vapaa-ajan toiminnoissa avustaminen
+            <br>
+            2021, 2 viikkoa
+            <br>
+            <br>
+            <b>Tampereen pääkirjasto</b>
+            <br>
+            TET-harjoittelu
+            <br>
+            Työtehtävät: Palautetun aineiston käsittely, hyllyttäminen, myyntiin menevän aineiston leimaus,
+            varausten haku, uutuuksien käsittely ja AV-aineiston tarkistus
+            <br>
+            2018, 2 viikkoa
+            <br>
+            <br>
+            <b>Ylöjärven terveyskeskus</b>
+            <br>
+            TET-harjoittelu
+            <br>
+            Työtehtävät: Ruuan jakelu, siivoaminen, henkilökunnan avustaminen ja potilaiden auttaminen
+            <br>
+            2017, 3 päivää
+            <br>
+            <br>
+        </p>
 
-                <body>
-                    <div id = "heart"></div>
-                </body>
+        <br>
+        <br>
 
-                <br>
-                <br>
-            </p>
+        <div class="grid-container">
+
+            <div class="grid1">
+                <img src="panda.jpeg" alt="Panda2" style="width: 400px; height: 300px;">
             </div>
+        
+            <div class="grid2">
+                <div id="heart"></div>
+            </div>
+          
+        </div>
+
+        <br>
+        <br>
+
+    </div>
+
+</body>
+
+</html>
