--- a/koulutus.html
+++ b/koulutus.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="fi">
+
 <head>
     <title>Petra Partanen - Koulutus</title>
     <meta charset="UTF-8">
@@ -13,14 +16,8 @@
         <a href="koulutus.html"><i class="2"></i> Koulutus</a>
         <a href="tyokokemus.html"><i class="3"></i>Työkokemus</a>
         <a href="erityisosaaminen.html"><i class="4"></i>Erityisosaaminen</a>
+    </div>
 
-</body>
-
-</html>
-</div>
-
-
-<body>
     <div class="sivu">
 
         <h1>Koulutus</h1>
@@ -44,17 +41,19 @@
             Kassakoulutus S-ryhmä 2022
         </p>
 
+
+        <br>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7930.9448932798105!2d24.92353352174033!3d60.20164810243386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20University%20of%20Applied%20Sciences%20-%20Pasila%20campus!5e0!3m2!1sen!2sfi!4v1696000497864!5m2!1sen!2sfi"
+            width="500" height="350" style="border:0;" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <br>
+        <br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Haaga-Helia_Pasila.jpg/640px-Haaga-Helia_Pasila.jpg"
+            alt="Haaga-Helia_Pasila" style="width: 500px;height: 400px;">
+
+        <br>
+        <br>
+    </div>
 </body>
 
-<br>
-<iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7930.9448932798105!2d24.92353352174033!3d60.20164810243386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208606a60874b%3A0x50a651a72fbb180b!2sHaaga-Helia%20University%20of%20Applied%20Sciences%20-%20Pasila%20campus!5e0!3m2!1sen!2sfi!4v1696000497864!5m2!1sen!2sfi"
-    width="500" height="350" style="border:0;" allowfullscreen="" loading=""
-    referrerpolicy="no-referrer-when-downgrade"></iframe>
-<br>
-<br>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Haaga-Helia_Pasila.jpg/640px-Haaga-Helia_Pasila.jpg"
-    alt="" style="width: 500px;height: 400px;">
-<br>
-<br>
-</div>
+</html>
