--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="sidebar">
-    <a href="etusivu.html"><i class="1"></i>Etusivu</a>
+    <a href="index.html"><i class="1"></i>Etusivu</a>
     <a href="koulutus.html"><i class="2"></i> Koulutus</a>
     <a href="tyokokemus.html"><i class="3"></i>Työkokemus</a>
     <a href="erityisosaaminen.html"><i class="4"></i>Erityisosaaminen</a>
